If the user is already friends with the displayed user in the addFriendViewController, the button next to the displayed user will be disabled and the button image will indicate that they are already friends.

--- a/PhotoZap/Base.lproj/Main.storyboard
+++ b/PhotoZap/Base.lproj/Main.storyboard
@@ -316,6 +316,7 @@
                                                     <state key="normal" image="Add">
                                                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                                     </state>
+                                                    <state key="disabled" image="Check"/>
                                                     <state key="selected" image="Album"/>
                                                     <connections>
                                                         <action selector="friendButtonTapped:" destination="DR4-gu-O1N" eventType="touchUpInside" id="dFS-zU-VWQ"/>
