--- a/PhotoZap/Base.lproj/Main.storyboard
+++ b/PhotoZap/Base.lproj/Main.storyboard
@@ -8,7 +8,7 @@
         <!--Nearby Friends-->
         <scene sceneID="uoh-Vb-4k6">
             <objects>
-                <viewController storyboardIdentifier="NearbyFriendsViewController" automaticallyAdjustsScrollViewInsets="NO" id="zSz-C2-EX4" customClass="NearbyFriendsViewController" customModule="PhotoZap" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="zSz-C2-EX4" customClass="NearbyFriendsViewController" customModule="PhotoZap" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="xhK-uS-qrm"/>
                         <viewControllerLayoutGuide type="bottom" id="wgL-HN-vBg"/>
@@ -19,7 +19,7 @@
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" translatesAutoresizingMaskIntoConstraints="NO" id="nt9-9x-hG1">
                                 <rect key="frame" x="0.0" y="64" width="600" height="536"/>
-                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <color key="backgroundColor" red="0.93725490196078431" green="0.93725490196078431" blue="0.95686274509803926" alpha="1" colorSpace="calibratedRGB"/>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="NearbyFriendsCell" textLabel="BSd-pW-cuw" style="IBUITableViewCellStyleDefault" id="d1e-re-Fjf">
                                         <autoresizingMask key="autoresizingMask"/>
@@ -29,7 +29,7 @@
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="BSd-pW-cuw">
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
@@ -51,7 +51,7 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Nearby Friends" id="Y5V-GC-eni">
-                        <barButtonItem key="leftBarButtonItem" title="Reselect Photos" id="mYX-LA-b1W">
+                        <barButtonItem key="leftBarButtonItem" title="Photos" id="mYX-LA-b1W">
                             <connections>
                                 <action selector="reselectPhotosTapped:" destination="zSz-C2-EX4" id="ZQ6-Vq-ED7"/>
                             </connections>
@@ -561,7 +561,7 @@
         <!--Navigation Controller-->
         <scene sceneID="txM-oa-qIT">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="j1r-BV-YYr" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="NearbyFriendsNavigation" automaticallyAdjustsScrollViewInsets="NO" id="j1r-BV-YYr" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="3aB-Ta-USz">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
