--- a/PhotoZap/Base.lproj/Main.storyboard
+++ b/PhotoZap/Base.lproj/Main.storyboard
@@ -53,12 +53,12 @@
                     <navigationItem key="navigationItem" title="Connections" id="Y5V-GC-eni">
                         <barButtonItem key="leftBarButtonItem" title="Cancel" id="mYX-LA-b1W">
                             <connections>
-                                <action selector="reselectPhotosTapped:" destination="zSz-C2-EX4" id="ZQ6-Vq-ED7"/>
+                                <action selector="cancelButtonTapped:" destination="zSz-C2-EX4" id="eeK-0g-9tq"/>
                             </connections>
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="Send" id="lnd-ce-xgE">
                             <connections>
-                                <action selector="cancelButtonTapped:" destination="zSz-C2-EX4" id="xcy-ch-Phj"/>
+                                <action selector="sendButtonTapped:" destination="zSz-C2-EX4" id="Luh-ud-ZYB"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -68,7 +68,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jiQ-oW-uYd" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="38" y="1616"/>
+            <point key="canvasLocation" x="-1538" y="1584"/>
         </scene>
         <!--Send Photos-->
         <scene sceneID="xIY-eX-EhH">
@@ -144,7 +144,89 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wq6-uh-y66" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="712" y="1651"/>
+            <point key="canvasLocation" x="-648" y="1579"/>
+        </scene>
+        <!--Searching-->
+        <scene sceneID="ySe-P6-w96">
+            <objects>
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="tGg-BR-Uiu" customClass="ReceiveZapViewController" customModule="PhotoZap" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="oIV-aL-fhC"/>
+                        <viewControllerLayoutGuide type="bottom" id="cea-FW-oSt"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="76F-dc-zeZ">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" translatesAutoresizingMaskIntoConstraints="NO" id="wp9-gt-HRA">
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                                <color key="backgroundColor" red="0.93725490196078431" green="0.93725490196078431" blue="0.95686274509803926" alpha="1" colorSpace="calibratedRGB"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ReceiveZapCell" id="KkD-GN-Ovq" customClass="ReceiveZapTableViewCell" customModule="PhotoZap" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KkD-GN-Ovq" id="Xpe-Sh-E5u">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Agt-ue-g6C">
+                                                    <rect key="frame" x="15" y="11" width="46" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Not connected" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="do3-8w-EIg">
+                                                    <rect key="frame" x="471" y="11" width="114" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="Agt-ue-g6C" firstAttribute="leading" secondItem="Xpe-Sh-E5u" secondAttribute="leading" constant="15" id="74j-JT-6Im"/>
+                                                <constraint firstAttribute="trailing" secondItem="do3-8w-EIg" secondAttribute="trailing" constant="15" id="A3e-rd-USg"/>
+                                                <constraint firstAttribute="centerY" secondItem="Agt-ue-g6C" secondAttribute="centerY" id="DQe-cY-YOU"/>
+                                                <constraint firstAttribute="centerY" secondItem="do3-8w-EIg" secondAttribute="centerY" id="NZU-un-z0h"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="connectionStatusLabel" destination="do3-8w-EIg" id="rp2-vK-0il"/>
+                                            <outlet property="usernameLabel" destination="Agt-ue-g6C" id="K2A-dh-WgG"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="tGg-BR-Uiu" id="QfJ-fa-daK"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="wp9-gt-HRA" firstAttribute="top" secondItem="76F-dc-zeZ" secondAttribute="top" id="0MS-a8-vHO"/>
+                            <constraint firstItem="wp9-gt-HRA" firstAttribute="top" secondItem="oIV-aL-fhC" secondAttribute="bottom" id="X1W-2N-dAi"/>
+                            <constraint firstAttribute="bottom" secondItem="wp9-gt-HRA" secondAttribute="bottom" id="apI-mu-EpO"/>
+                            <constraint firstItem="wp9-gt-HRA" firstAttribute="leading" secondItem="76F-dc-zeZ" secondAttribute="leading" id="l78-q5-aTo"/>
+                            <constraint firstAttribute="trailing" secondItem="wp9-gt-HRA" secondAttribute="trailing" id="vya-C4-zeF"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="0MS-a8-vHO"/>
+                            </mask>
+                        </variation>
+                    </view>
+                    <navigationItem key="navigationItem" title="Searching" id="gBB-oA-9Ay">
+                        <barButtonItem key="leftBarButtonItem" title="Back" id="2Vr-Jn-h25">
+                            <connections>
+                                <action selector="backButtonTapped:" destination="tGg-BR-Uiu" id="iF7-ha-PhX"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="tableView" destination="wp9-gt-HRA" id="htc-Cu-jAg"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nfs-tS-J3b" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-653" y="2380"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="O3A-iC-x94">
@@ -407,7 +489,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bUF-Vf-Np6" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="485" y="2436"/>
+            <point key="canvasLocation" x="2041" y="2380"/>
         </scene>
         <!--Add Friends-->
         <scene sceneID="IQH-dw-MWk">
@@ -505,7 +587,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jgH-dB-7g3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="485" y="3164"/>
+            <point key="canvasLocation" x="1205" y="3140"/>
         </scene>
         <!--Zap-->
         <scene sceneID="HEd-4x-6h6">
@@ -524,7 +606,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4df-eW-MVl" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2043" y="1596"/>
+            <point key="canvasLocation" x="283" y="1572"/>
         </scene>
         <!--Friends-->
         <scene sceneID="IHl-SH-aTN">
@@ -543,7 +625,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="58F-jY-Nok" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1297" y="1692"/>
+            <point key="canvasLocation" x="1243" y="1564"/>
         </scene>
         <!--Wi-Fi Direct-->
         <scene sceneID="Fzs-Gd-0nN">
@@ -580,7 +662,25 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="na7-WR-e2z" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-727" y="1616"/>
+            <point key="canvasLocation" x="-2303" y="1584"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Ubk-wV-h29">
+            <objects>
+                <navigationController storyboardIdentifier="ReceiveZapNavigation" automaticallyAdjustsScrollViewInsets="NO" id="zR5-SU-zOc" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="wv6-oM-ph3">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="tGg-BR-Uiu" kind="relationship" relationship="rootViewController" id="N2N-OY-Sb4"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3K1-LY-uWW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1465" y="2380"/>
         </scene>
     </scenes>
     <resources>
